Added new photoes for activities

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -43,12 +43,12 @@
                     kulturattraksjoner eller utforske det pulserende utelivet, har vi noe for alle.
                     La deg inspirere og gjør deg klar til å utforske Oslo fra et nytt perspektiv!
                 </p>
-                <!--funke for nå, men må forbedres, legge bilde under osv-->
+                <!--Pictures are in 16:9 format-->
                 <div class="scroll-img-container">
-                    <img src="/images/activitiesBg4.jpg" alt="">
-                    <img src="/images/attractionsBg3.jpg" alt="">
-                    <img src="/images/cafeBg2.jpg" alt="">
-                    <img src="/images/cafeBg2.jpg" alt="">
+                    <img src="/images/toppic1.jpg" alt="">
+                    <img src="/images/toppic2.jpg" alt="">
+                    <img src="/images/toppic3.jpg" alt="">
+                    <img src="/images/toppic4.jpg" alt="">
                 </div>
             </section>
 
@@ -59,9 +59,9 @@
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
                 <picture>
-                    <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                    <img src="../images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
+                    <source srcset="/images/clubbing.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/clubbing.jpg" media="(max-width: 599px)">
+                    <img src="../images/clubbing" alt="bilde av uteliv" style="width: 100%;">
                 </picture>
 
                 <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
@@ -76,9 +76,9 @@
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
                 <picture>
-                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                    <img src="../images/kafe1.jpg" alt="bilde av kafé" style="width: 100%;">
+                    <source srcset="/images/cafe2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/cafe2.jpg" media="(max-width: 599px)">
+                    <img src="../images/cafe2.jpg" alt="bilde av kaffe" style="width: 100%;">
                 </picture>
 
                 <p> Nyt en avslappende stund på en av byens mange kaféer.
@@ -93,9 +93,9 @@
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
                 <picture>
-                    <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
-                    <img src="../images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
+                    <source srcset="/images/attractions2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/attractions2.jpg" media="(max-width: 599px)">
+                    <img src="../images/attractions2.jpg" alt="bilde av attraksjoner" style="width: 100%;">
                 </picture>
                 <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
                     Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
@@ -110,9 +110,9 @@
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
                 <picture>
-                    <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
-                    <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
+                    <source srcset="/images/activities2.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/activities2.jpg" media="(max-width: 599px)">
+                    <img src="../images/activities2.jpg" alt="bilde av aktiviteter" style="width: 100%;">
                 </picture>
 
                 <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
@@ -128,9 +128,9 @@
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
                 <picture>
-                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
-                    <img src="../images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
+                    <source srcset="/images/budget.jpg" media="(min-width: 600px)">
+                    <source srcset="/images/budget.jpg" media="(max-width: 599px)">
+                    <img src="../images/budget.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
                 </picture>
 
                 <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
