--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -57,12 +57,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                <picture>
-                    <source srcset="/images/utelivBg1.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/utelivBg1.jpg" media="(max-width: 599px)">
-                    <img src="../images/utelivBg1" alt="bilde av uteliv" style="width: 100%;">
-                </picture>
-
+                <img src="../images/utelivBg1.jpg" alt="bilde av uteliv" style="width: 100%;">
                 <p> Utforsk Oslos fantastiske uteliv! Utforsk byens spennende uteliv!
                     Uansett om du liker eksklusive cocktailbarer, livlige klubber eller
                     koselige puber, finnes det noe for enhver smak.
@@ -74,11 +69,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                <picture>
-                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
                     <img src="../images/kafe1.jpg" alt="bilde av kafé" style="width: 100%;">
-                </picture>
 
                 <p> Nyt en avslappende stund på en av byens mange kaféer.
                     Enten du foretrekker en kopp kaffe, te, eller kanskje noe
@@ -91,11 +82,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                <picture>
-                    <source srcset="/images/attractionsBg3.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/attractionsBg3.jpg" media="(max-width: 599px)">
                     <img src="../images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
-                </picture>
                 <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
                     Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
                     imponerende museer og historiske monumenter som gir innblikk i kultur og
@@ -108,11 +95,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                <picture>
-                    <source srcset="/images/activitiesBg4.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/activitiesBg4.jpg" media="(max-width: 599px)">
                     <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
-                </picture>
 
                 <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
                     Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
@@ -126,11 +109,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                <picture>
-                    <source srcset="/images/cafeBg2.jpg" media="(min-width: 600px)">
-                    <source srcset="/images/kafe1.1.jpg" media="(max-width: 599px)">
                     <img src="../images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
-                </picture>
 
                 <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
                     finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
@@ -149,31 +128,31 @@
                 <h3>Anbefalinger</h3>
                 <!--midlertidig!! bedre måte enn a heleveien?, men koden er responsiv og funker:)-->
                 <!--endre class navn?, neo som mangler..-->
-                <div class="small-img-container" >
-                        <a href="https://www.handbakt.no/"class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
-                            <span class="hover-text">HANDBAKT</span>
-                        </a>
-                        <a href="https://kumi.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
-                            <span class="hover-text">KUMI</span>
-                        </a>
-                        <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
-                            <span class="hover-text">FUGLEN</span>
-                        </a>
-                        <a href="https://www.handbakt.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
-                            <span class="hover-text">HANDBAKT</span>
-                        </a>
-                        <a href="https://kumi.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
-                            <span class="hover-text">KUMI</span>
-                        </a>
-                        <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
-                            <span class="hover-text">FUGLEN</span>
-                        </a>
+                <div class="small-img-container">
+                    <a href="https://www.handbakt.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                        <span class="hover-text">HANDBAKT</span>
+                    </a>
+                    <a href="https://kumi.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                        <span class="hover-text">KUMI</span>
+                    </a>
+                    <a href="https://fuglen.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                        <span class="hover-text">FUGLEN</span>
+                    </a>
+                    <a href="https://www.handbakt.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                        <span class="hover-text">HANDBAKT</span>
+                    </a>
+                    <a href="https://kumi.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                        <span class="hover-text">KUMI</span>
+                    </a>
+                    <a href="https://fuglen.no/" class="small-img-box">
+                        <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                        <span class="hover-text">FUGLEN</span>
+                    </a>
                 </div>
             </section>
         </article>
