--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -69,8 +69,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                    <img src="../images/kafe1.jpg" alt="bilde av kafé" style="width: 100%;">
-
+                <img src="../images/kafe1.1.jpg" alt="bilde av kafé" style="width: 100%;">
                 <p> Nyt en avslappende stund på en av byens mange kaféer.
                     Enten du foretrekker en kopp kaffe, te, eller kanskje noe
                     søtt ved siden av, finner du et sted som passer din stil.
@@ -82,7 +81,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                    <img src="../images/attractionsBg3" alt="bilde av attraksjoner" style="width: 100%;">
+                <img src="../images/attractionsBg3.jpg" alt="bilde av attraksjoner" style="width: 100%;">
                 <p> Oslo er hjem til mange spennende og ikoniske attraksjoner.
                     Byen har mange ikoniske og spennende attraksjoner! Oppdag vakre parker,
                     imponerende museer og historiske monumenter som gir innblikk i kultur og
@@ -95,8 +94,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                    <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
-
+                <img src="../images/activitiesBg4.jpg" alt="bilde av aktiviteter" style="width: 100%;">
                 <p> Oslo tilbyr et bredt utvalg av aktiviteter for alle aldre og interesser.
                     Det finnes aktiviteter for alle interesser! Fra naturopplevelser i skog
                     og mark til urbane eventyr og sportsaktiviteter – her er det mye å utforske
@@ -109,8 +107,7 @@
                 <svg class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 -4 24 24">
                     <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                 </svg>
-                    <img src="../images/kafe1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
-
+                <img src="../images/kafe1.1.jpg" alt="bilde av budsjettvennlig" style="width: 100%;">
                 <p> Oslo trenger ikke å være dyrt! Hvis du er ute etter rimelige opplevelser,
                     finnes det mange steder som tilbyr fantastisk verdi. Oppdag gratis opplevelser,
                     rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
