tidy up git page

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                             Se programplan på student.oslomet.no</a>
                     </p>
                 </div>
-                <!--Studiets-oppbygging er et stort emne må egne sections-->
+                <!--Studiets-oppbygging er et stort emne, og må ha egne sections-->
                 <div id="Studiets-oppbygging" class="tabcontent">
 
                     <p id="star-symbol-explainer">
