--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -36,13 +36,13 @@
             <div class="img-container-github">
                 <div class="img-item">
                     <h2>Commit History i GIT</h2>
-                    <img src="../images/git history 1.png" alt="bilde 1 commit">
-                    <img src="../images/git history 2 riktig.png" alt="bilde 2 commit">
+                    <img src="../images/git history 1.png" alt="bilde 1 commit history">
+                    <img src="../images/git history 2 riktig.png" alt="bilde 2 commit history">
                 </div>
                 <div class="img-item">
                     <h2>Specific Change i GIT</h2>
-                    <img src="../images/git bilde 1.png" alt="bilde 3 commit">
-                    <img src="../images/gitbilde 2.png" alt="bilde 4 commit">
+                    <img src="../images/git bilde 1.png" alt="bilde 3 specific change">
+                    <img src="../images/gitbilde 2.png" alt="bilde 4 specific change">
                 </div>
             </div>
         <section id="main-github">
