--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -98,7 +98,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article class="more-info">
+        <article id="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
