--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
-        <img class="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+        <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q" aria-label="Søke-knapp"><i class="fa fa-search"
@@ -1192,7 +1192,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article id="more-info">
+        <article class="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
@@ -1256,7 +1256,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav id="mediabox">
+        <nav class="mediabox">
 
             <ul class="media">
                 <li>
