--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -201,7 +201,6 @@
                     rimelige spiseplasser og vakre utendørsområder som byr på flotte opplevelser.
                 </p>
             </a>
->>>>>>> parent of a842995 (fixed pic links)
 
 
 
@@ -248,7 +247,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article id="more-info">
+        <article class="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
@@ -302,7 +301,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav id="mediabox">
+        <nav class="mediabox">
 
             <ul class="media">
                 <li>
