tror accessibility er fiksa, men tydeligvis noe feil med ikoner, klarer ikke laste ikoner, muligens en link i head som mangler?

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <a href="https://www.oslomet.no/" aria-label="Link til hjemmeside">
-        <img id="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+        <img class="header-logo" src="images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q" aria-label="Søke-knapp"><i class="fa fa-search"
