--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -101,7 +101,7 @@
 
     <footer>
 
-        <article id="more-info">
+        <article class="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering" alt="Map markering"><span class="sr-only">Map markering</span></span>
@@ -164,7 +164,7 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav id="mediabox">
+        <nav class="mediabox">
 
             <ul class="media">
                 <li>
