--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -215,27 +215,27 @@
                     <!--endre class navn?, neo som mangler..-->
                     <div class="small-img-container">
                         <a href="https://www.handbakt.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                            <img src="../images/budget.jpg" alt="Bilde 1">
                             <span class="hover-text">HANDBAKT</span>
                         </a>
                         <a href="https://kumi.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                            <img src="../images/budget.jpg" alt="Bilde 2">
                             <span class="hover-text">KUMI</span>
                         </a>
                         <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                            <img src="../images/budget.jpg" alt="Bilde 3">
                             <span class="hover-text">FUGLEN</span>
                         </a>
                         <a href="https://www.handbakt.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 1">
+                            <img src="../images/budget.jpg" alt="Bilde 1">
                             <span class="hover-text">HANDBAKT</span>
                         </a>
                         <a href="https://kumi.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 2">
+                            <img src="../images/budget.jpg" alt="Bilde 2">
                             <span class="hover-text">KUMI</span>
                         </a>
                         <a href="https://fuglen.no/" class="small-img-box">
-                            <img src="/images/cafeBg2.jpg" alt="Bilde 3">
+                            <img src="../images/budget.jpg" alt="Bilde 3">
                             <span class="hover-text">FUGLEN</span>
                         </a>
                     </div>
