--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -84,93 +84,93 @@
         </section>       
     </main>
 
-    <!-- Footer Menu -->
-    <footer>
+   <!-- Footer Menu -->
+   <footer>
 
-        <article id="more-info">
-            <div class="row">
-                <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
+    <article class="more-info">
+        <div class="row">
+            <section id="col1">
+                <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
-                    <address class="address-font">
-                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
-                            <h3>Oslo Metropolitan University</h3>
-                        </a>
-                        <p>Storbyuniversitetet</p>
-                        Postboks 4, St. Olavs plass
-                        0130 Oslo
-                    </address>
-                </section>
+                <address class="address-font">
+                    <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
+                        <h3>Oslo Metropolitan University</h3>
+                    </a>
+                    <p>Storbyuniversitetet</p>
+                    Postboks 4, St. Olavs plass
+                    0130 Oslo
+                </address>
+            </section>
 
-                <section id="col2">
-                    <span id="icon" class="fa fa-phone" alt="Telefon"></span>
+            <section id="col2">
+                <span id="icon" class="fa fa-phone" alt="Telefon"></span>
 
-                    <address class="address-font">
-                        <h3>Kontakt oss</h3>
-                        <p>Tlf.: 67 23 50 00</p>
-                    </address>
-                </section>
+                <address class="address-font">
+                    <h3>Kontakt oss</h3>
+                    <p>Tlf.: 67 23 50 00</p>
+                </address>
+            </section>
 
-                <section id="col3">
-                    <span id="icon" class="fa fa-info" alt="Info"></span>
-                    <span>
-                        <h3> Mer Info</h3>
-                        <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-label="expand info menu">
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                                    viewBox="2 1 20 20" alt=" Nedover pil">
-                                    <path fill-rule="evenodd"
-                                        d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
-                                </svg>
-                            </button>
-                        </div>
-                        <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
-                                studenter</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
-                                stillinger</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
-                                og <br> informasjonskapslar</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
-                            <a class="more-info-links"
-                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
-                        </div>
-                        <script src="../javascript/index-tabs"></script>
-                    </span>
-                </section>
-            </div>
-        </article>
-        <!-- Social Media links -->
-        <nav id="mediabox">
+            <section id="col3">
+                <span id="icon" class="fa fa-info" alt="Info"></span>
+                <span>
+                    <h3>Mer Info</h3>
+                    <div class="more-info-tab">
+                        <button id="toggle-tab" class="more-info-tab-button" aria-label="utvid info meny">
+                            <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                viewBox="2 1 20 20" alt=" Nedover pil">
+                                <path fill-rule="evenodd"
+                                    d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div id="more-info-tab" class="more-info-tabcontent">
+                        <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
+                            studenter</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
+                            stillinger</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
+                            og <br> informasjonskapslar</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                        <a class="more-info-links"
+                            href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
+                    </div>
+                    <script src="../javascript/index-tabs"></script>
+                </span>
+            </section>
+        </div>
+    </article>
+    <!-- Social Media links -->
+    <nav class="mediabox">
 
-            <ul class="media">
-                <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
-                </li>
+        <ul class="media">
+            <li>
+                <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
+            </li>
 
-                <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
-                </li>
+            <li>
+                <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
+            </li>
 
-                <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
-                </li>
-            </ul>
-        </nav>
-    </footer>
+            <li>
+                <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
+            </li>
+        </ul>
+    </nav>
+</footer>
 </body>
 
 </html>
