--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -16,9 +16,11 @@
         <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
     </a>
     <nav>
-        <a id="search-button-activity" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
+        <a id="search-button-activity" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i class="fa fa-search"></i>
+            <span class="sr-only">Søke-knapp</span></a>
         <div class="dropdown-activity">
-            <button class="dropbtn-activity" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
+            <button class="dropbtn-activity" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i class="fa fa-bars" aria-hidden="true"></i>
+                <span class="sr-only">Navigeringsmeny</span></button>
             <div class="dropdown-content-activity" id="dropdown-menu">
                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                 <a href="accessibility.html">Accessibility</a>
@@ -247,38 +249,32 @@
 
     <!-- Footer Menu -->
     <footer>
-
-        <article id="more-info">
+        <article class="more-info">
             <div class="row">
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
-
+                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering" alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
-                        <a class="more-info-links" href="#">
-                            <h3>OsloActivities AS</h3>
+                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
+                            <h3>Oslo Metropolitan University</h3>
                         </a>
-                        <p>Hovedkontor:</p>
-                        Solglimtveien 123B
-                        0480 Oslo
-                        Norge
+                        <p>Storbyuniversitetet</p>
+                        Postboks 4, St. Olavs plass
+                        0130 Oslo
                     </address>
                 </section>
-
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" alt="Telefon"></span>
-
+                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
-                        <p>Tlf.: 12 34 56 78</p>
+                        <p>Tlf.: 67 23 50 00</p>
                     </address>
                 </section>
-
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" alt="Info"></span>
+                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span class="sr-only">Info</span></span>
                     <span>
-                        <h3>Mer Info</h3>
+                        <h3> Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-label="expand info menu">
+                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true" title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
@@ -287,14 +283,25 @@
                             </button>
                         </div>
                         <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="#">Arrangementsoversikt</a>
-                            <a class="more-info-links" href="#">Ledige
+                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
+                                studenter</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
                                 stillinger</a>
-                            <a class="more-info-links" href="#">Personvernerklæring
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
                                 og <br> informasjonskapslar</a>
-                            <a class="more-info-links" href="#">Pressekontakt</a>
-                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a>
-                            <a class="more-info-links" href="#">Admin</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                            <a class="more-info-links"
+                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
@@ -302,26 +309,22 @@
             </div>
         </article>
         <!-- Social Media links -->
-        <nav id="mediabox">
-
+        <nav class="mediabox">
             <ul class="media">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" alt="Twitter"> </a>
-                </li>
-
-                <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
-                </li>
-
-                <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" alt="LinkedIn"></a>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" aria-hidden="true" title="Twitter"><span class="sr-only">Twitter</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true" title="Facebook"><span class="sr-only">Facebook</span></a>
+                </li>
+                <li>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
             </ul>
         </nav>
     </footer>
 </body>
-
 </html>
